--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang='en'>
 	<head>
-	
+		<meta charset='utf-8'>
+		<meta name='viewport' content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+		<link rel="stylesheet" href="./Content/Styles/fonts.css">
+		<style>
 			body {
 				margin: 0;
 				padding: 0;
@@ -35,12 +38,10 @@
 		</style>
 	</head>
 	<body>
-		
+		<div id='three-d'></div>
 		<video id='video-container' class='hidden' height='480px'></video>
 		<canvas id='hud' width='640px' height='480px'></canvas>
 		<canvas id='rendering' width='4096px' height='4096px'></canvas>
 		<script type="module" src="./Content/Datas/Scripts/System/main.js"></script>
-		
-	
 	</body>
 </html>
