--- a/index.html
+++ b/index.html
@@ -36,8 +36,21 @@
 				display: none;
 			}
 		</style>
+		<!-- Yandex.RTB -->
+	<script>window.yaContextCb=window.yaContextCb||[]</script>
+	<script src="https://yandex.ru/ads/system/context.js" async></script>
 	</head>
 	<body>
+		<!-- Yandex.RTB R-A-4927138-1 -->
+		<div id="yandex_rtb_R-A-4927138-1"></div>
+		<script>
+		window.yaContextCb.push(()=>{
+			Ya.Context.AdvManager.render({
+				"blockId": "R-A-4927138-1",
+				"renderTo": "yandex_rtb_R-A-4927138-1"
+			})
+		})
+		</script>
 		<div id='three-d'></div>
 		<video id='video-container' class='hidden' height='480px'></video>
 		<canvas id='hud' width='640px' height='480px'></canvas>
